--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+serviceAccountKey.json
+src/life-saver-3-firebase-adminsdk-fbsvc-8545291d7e.json
